fixed spacing issue

--- a/src/components/Characters/Characters.css
+++ b/src/components/Characters/Characters.css
@@ -16,18 +16,17 @@
 
 .characters {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: nowrap;
   height: 100vh;
   width: 100vw;
   /* border: 3px solid black; */
-  justify-content: center;
-  align-items: flex-start;
+  justify-content: flex-start;
+  align-items: center;
   text-align: center;
 }
 
-.bigBox {
-  /* position: relative; */
+.bigCharacterBox {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
